--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "fstream": "^1.0.12",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.1.0",
     "json-loader": "^0.5.7",
     "node-sass": "^4.12.0",
